# datenocmd

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
dateno/: core.py
dateno_cmd/: __init__.py  __main__.py  cli.py  core.py  sdk_factory.py  settings.py
dateno_cmd/commands/: __init__.py  catalogs.py  config.py  raw.py  search.py  service.py  stats.py
dateno_cmd/services/: __init__.py  context.py
dateno_cmd/utils/: __init__.py  command.py  errors.py  io.py  sdk.py  search.py  serialization.py
tests/: test_cli.py  test_cli_config.py  test_cli_exit_codes.py  test_commands_other.py  test_commands_search.py  test_contract_cli_sdk.py  test_integration_cli.py  test_services_context.py  test_utils_command.py  test_utils_errors.py  test_utils_io.py  test_utils_sdk.py  test_utils_search.py  test_utils_serialization.py
